Responsive Spacing fix

--- a/src/pages/Home/style.scss
+++ b/src/pages/Home/style.scss
@@ -492,6 +492,7 @@ img {
 
 .trendings-container {
     width: 100%;
+    margin-bottom: 24px;
 
     h1 {
         margin-left: 16px;
